Added Gold Accents

--- a/src/screens/Home/Hero/Hero.module.sass
+++ b/src/screens/Home/Hero/Hero.module.sass
@@ -89,7 +89,7 @@
     display: flex
     justify-content: center
     align-items: center
-    background: $green
+    background: $gold
     border-radius: 50%
     svg
         fill: $neutrals8
