--- a/src/styles/blocks/status.sass
+++ b/src/styles/blocks/status.sass
@@ -9,7 +9,7 @@
   color: $neutrals8
 
 .status-green
-  background: $green
+  background: $gold
 
 .status-purple
   background: $purple
@@ -25,6 +25,6 @@
     color: $neutrals8
 
 .status-stroke-green
-  box-shadow: inset 0 0 0 2px $green
-  color: $green
+  box-shadow: inset 0 0 0 2px $gold
+  color: $gold
 
