--- a/src/styles/blocks/title.sass
+++ b/src/styles/blocks/title.sass
@@ -2,7 +2,8 @@
 .h1,
 .h2,
 .h3,
-.h4
+.h4,
+.text-color-gold
     +dm-sans
     font-weight: 700
 
@@ -30,3 +31,6 @@
     font-size: 32px
     line-height: (40/32)
     letter-spacing: -.01em
+
+.text-color-gold
+    color: #BF9A36
