--- a/src/components/Header/Notification/Notification.module.sass
+++ b/src/components/Header/Notification/Notification.module.sass
@@ -25,7 +25,7 @@
             width: 12px
             height: 12px
             border-radius: 50%
-            background: $green
+            background: $gold
 
 .body
     position: absolute
