--- a/src/screens/Home/Selection/Selection.module.sass
+++ b/src/screens/Home/Selection/Selection.module.sass
@@ -134,10 +134,10 @@
 .price
     display: inline-block
     padding: 7px
-    box-shadow: inset 0 0 0 2px $green
+    box-shadow: inset 0 0 0 2px $gold
     border-radius: 4px
     +hairline-2
-    color: $green
+    color: $gold
 
 .item
     display: flex
