--- a/src/screens/Item/Control/Accept/Accept.module.sass
+++ b/src/screens/Item/Control/Accept/Accept.module.sass
@@ -19,8 +19,8 @@
     width: 48px
     height: 48px
     margin-right: 16px
-    background: $green
-    border: 2px solid $green
+    background: $gold
+    border: 2px solid $gold
     border-radius: 50%
     transition: all .2s
     svg
