--- a/src/screens/UploadDetails/Preview/Preview.module.sass
+++ b/src/screens/UploadDetails/Preview/Preview.module.sass
@@ -70,12 +70,12 @@
     margin-left: 12px
     padding: 0 8px
     border-radius: 4px
-    box-shadow: inset 0 0 0 2px $green
+    box-shadow: inset 0 0 0 2px $gold
     font-size: 12px
     line-height: 26px
     font-weight: 700
     text-transform: uppercase
-    color: $green
+    color: $gold
 
 .counter
     +dark
