--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -38,6 +38,8 @@ $pink: #EF466F
 $green: #45B26B
 $asphalt: #E4D7CF
 $yellow: #FFD166
+$gold: #BF9A36
+$royal: #55168B
 
 $neutrals1: #141416
 $neutrals2: #23262F
