--- a/src/styles/blocks/status.sass
+++ b/src/styles/blocks/status.sass
@@ -11,8 +11,14 @@
 .status-green
   background: $gold
 
+.status-gold
+  background: $gold
+
 .status-purple
   background: $purple
+
+.status-blue
+  background: $blue
 
 .status-black
   background: $neutrals2
@@ -27,4 +33,12 @@
 .status-stroke-green
   box-shadow: inset 0 0 0 2px $gold
   color: $gold
+
+.status-stroke-gold
+  box-shadow: inset 0 0 0 2px $gold
+  color: $gold
+
+  .status-stroke-blue
+  box-shadow: inset 0 0 0 2px $gold
+  color: $blue
 
