--- a/src/components/OfferBuilder/SelectItems/Items.module.sass
+++ b/src/components/OfferBuilder/SelectItems/Items.module.sass
@@ -13,16 +13,18 @@
         margin: 0
 
 .card
-    flex: 0 0 calc(33.333% - 32px)
-    width: calc(33.333% - 32px)
+    flex: 0 0 calc(63.333% - 32px)
+    width: calc(63.333% - 32px)
+    min-width: calc(63.333% - 32px)
     margin: 32px 16px 0
     +x
-        flex: 0 0 calc(33.333% - 20px)
-        width: calc(33.333% - 20px)
+        flex: 0 0 calc(63.333% - 20px)
+        width: calc(63.333% - 20px)
+        min-width: calc(63.333% - 20px)
         margin: 32px 10px 0
     +d
-        flex: 0 0 calc(50% - 32px)
-        width: calc(50% - 32px)
+        flex: 0 0 calc(75% - 32px)
+        width: calc(75% - 32px)
         margin: 32px 16px 0
     +m
         width: 100%
