--- a/src/screens/OfferScreen/Item.module.sass
+++ b/src/screens/OfferScreen/Item.module.sass
@@ -65,13 +65,6 @@
     display: flex
     align-items: center
     margin-bottom: 40px
-
-.price
-    +dm-sans
-    font-size: 16px
-    line-height: 30px
-    &:not(:last-child)
-        margin-right: 8px
     
 .counter
     +button-1
@@ -92,12 +85,36 @@
 
 .nav
     display: flex
-    margin-bottom: 32px
-    padding: 6px
-    border-radius: 20px
-    box-shadow: inset 0 0 0 2px $neutrals6
-    +dark
-        box-shadow: inset 0 0 0 2px $neutrals3
+    margin: 0 -6px 32px
+    +m
+        margin: 0 -32px 32px
+        overflow: auto
+        overflow-x: auto
+        -ms-overflow-style: none
+        scrollbar-width: none
+        -webkit-overflow-scrolling: touch
+        &::-webkit-scrollbar
+            display: none
+        &:before,
+        &:after
+            content: ""
+            flex-shrink: 0
+            width: 32px
+            height: 1px
+
+.body
+    position: relative
+    z-index: 3
+    padding: 80px 0
+    +t
+        padding-top: 0
+    +m
+        padding: 0 0 64px
+    .container
+        display: flex
+        align-items: flex-start
+        +t
+            display: block
 
 .link
     padding: 6px 12px
@@ -118,6 +135,26 @@
             color: $neutrals2
     &:not(:last-child)
         margin-right: 8px
+
+.line
+    display: flex
+    align-items: flex-start
+    &:first-child
+        margin-bottom: 12px
+    &:nth-child(2)
+        margin-top: auto
+
+.price
+    flex-shrink: 0
+    margin-left: 8px
+    padding: 0 8px
+    border-radius: 4px
+    box-shadow: inset 0 0 0 2px $gold
+    font-size: 12px
+    line-height: 26px
+    font-weight: 700
+    text-transform: uppercase
+    color: $gold
     
 .users
     margin-bottom: auto
