--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,7 +1,7 @@
 @import ../../styles/helpers
 
 .header
-    position: relative
+    //position: relative
     z-index: 20
     padding: 20px 0
     border-bottom: 1px solid $neutrals6
@@ -10,6 +10,10 @@
         border: none
     +dark
         border-color: $neutrals3
+        background-color: #141416
+    position: fixed
+    top: 0
+    width: 100%
         
 .container
     display: flex
@@ -18,6 +22,13 @@
         margin-right: 12px
         +m
             display: none
+
+///* The sticky class is added to the navbar with JS when it reaches its scroll position */
+//.sticky
+//    position: fixed
+//    top: 0
+//    width: 100%
+
 
 .logo
     position: relative
