Fixed front-end functionality

--- a/src/components/Header/User/User.module.sass
+++ b/src/components/Header/User/User.module.sass
@@ -42,6 +42,7 @@
     
 .wallet
     margin-left: 12px
+    margin-top: .5ex
     +m
         display: none
 
@@ -53,7 +54,7 @@
         display: none
 
 .currency
-    color: $gold
+    color: $blue
 
 .body
     position: absolute
@@ -151,6 +152,8 @@
 
 .price
     +body-bold-1
+    margin-left: -0.4ex
+    margin-top: 0.2ex
 
 .button
     width: 100%
