--- a/src/components/OfferBuilder/SelectItems/Items.module.sass
+++ b/src/components/OfferBuilder/SelectItems/Items.module.sass
@@ -15,16 +15,20 @@
 .card
     flex: 0 0 calc(23.333% - 32px)
     width: calc(23.333% - 32px)
-    min-width: 20ex
+    min-width: 32ex
+    max-width: 32ex
     margin: 32px 16px 0
     +x
         flex: 0 0 calc(63.333% - 20px)
         width: calc(63.333% - 20px)
-        min-width: calc(63.333% - 20px)
+        min-width: 32ex
+        max-width: 32ex
         margin: 32px 10px 0
     +d
         flex: 0 0 calc(75% - 32px)
         width: calc(75% - 32px)
+        min-width: 32ex
+        max-width: 32ex
         margin: 32px 16px 0
     +m
         width: 100%
