ETH Offers are working on the front end

--- a/src/screens/OfferScreen/Item.module.sass
+++ b/src/screens/OfferScreen/Item.module.sass
@@ -2,6 +2,7 @@
 
 .section
     padding: 96px 0
+    margin-top: 2ex
     +x
         padding: 80px 0
     +m
@@ -85,7 +86,7 @@
 
 .nav
     display: flex
-    margin: 0 -6px 32px
+    margin: 0 128px 52px
     +m
         margin: 0 -32px 32px
         overflow: auto
