--- a/src/components/OfferBuilder/UploadDetails.module.sass
+++ b/src/components/OfferBuilder/UploadDetails.module.sass
@@ -171,7 +171,9 @@
 
 .switch
     flex-shrink: 0
-    margin-left: 24px
+    //margin-left: 24px
+    margin-top: -20px
+    margin-bottom: 20px
 
 .text
     margin-top: 4px
