--- a/src/screens/OfferScreen/Items/Items.module.sass
+++ b/src/screens/OfferScreen/Items/Items.module.sass
@@ -14,23 +14,25 @@
         margin: 0
 
 .card
-    flex: 0 0 calc(33.333% - 32px)
-    width: calc(33.333% - 32px)
-    max-width: 32px
+    flex: 0 0 calc(23.333% - 32px)
+    width: calc(23.333% - 32px)
+    min-width: 32ex
+    max-width: 32ex
     margin: 32px 16px 0
     +x
-        flex: 0 0 calc(33.333% - 20px)
-        width: calc(33.333% - 20px)
-        max-width: 32px
+        flex: 0 0 calc(63.333% - 20px)
+        width: calc(63.333% - 20px)
+        min-width: 32ex
+        max-width: 32ex
         margin: 32px 10px 0
     +d
-        flex: 0 0 calc(50% - 32px)
-        width: calc(50% - 32px)
-        max-width: 32px
+        flex: 0 0 calc(75% - 32px)
+        width: calc(75% - 32px)
+        min-width: 32ex
+        max-width: 32ex
         margin: 32px 16px 0
     +m
         width: 100%
-        max-width: 32px
         margin: 0
         &:not(:last-child)
             margin-bottom: 32px
