Added ETH listing support

--- a/src/components/HotBid/HotBid.module.sass
+++ b/src/components/HotBid/HotBid.module.sass
@@ -19,4 +19,9 @@
         margin: 0 -8px 
 
 .card
-    width: 100%
+    display: flex
+    flex-direction: column
+    &:hover
+        .control
+            visibility: visible
+            opacity: 0.4
