--- a/src/components/NFT/Card.module.sass
+++ b/src/components/NFT/Card.module.sass
@@ -113,6 +113,7 @@
     padding: 0 8px
     border-radius: 4px
     box-shadow: inset 0 0 0 2px $gold
+    //background-color: $white
     font-size: 12px
     line-height: 26px
     font-weight: 700
