--- a/src/components/Offer/Card.module.sass
+++ b/src/components/Offer/Card.module.sass
@@ -119,6 +119,48 @@
     text-transform: uppercase
     color: $gold
 
+.priceRec
+    flex-shrink: 0
+    margin-left: 8px
+    margin-top: 5px
+    padding: 0 8px
+    border-radius: 4px
+    max-width: 73px
+    box-shadow: inset 0 0 0 2px $gold
+    font-size: 12px
+    line-height: 26px
+    font-weight: 700
+    text-transform: uppercase
+    color: $gold
+
+.priceSent
+    flex-shrink: 0
+    margin-left: 8px
+    margin-top: 5px
+    padding: 0 8px
+    border-radius: 4px
+    max-width: 45px
+    box-shadow: inset 0 0 0 2px $blue
+    font-size: 12px
+    line-height: 26px
+    font-weight: 700
+    text-transform: uppercase
+    color: $blue
+
+.priceAccept
+    flex-shrink: 0
+    margin-left: 8px
+    margin-top: 5px
+    padding: 0 8px
+    border-radius: 4px
+    max-width: 78px
+    box-shadow: inset 0 0 0 2px $green
+    font-size: 12px
+    line-height: 26px
+    font-weight: 700
+    text-transform: uppercase
+    color: $green
+
 .users
     display: flex
     margin-right: auto
