Live eth price data

--- a/src/components/NFT/Card.module.sass
+++ b/src/components/NFT/Card.module.sass
@@ -119,6 +119,8 @@
     font-weight: 700
     text-transform: uppercase
     color: $gold
+    display: inline-block
+    vertical-align: middle
 
 .users
     display: flex
