--- a/src/components/InstallMetamaskPrompt/SignupPrompt.module.sass
+++ b/src/components/InstallMetamaskPrompt/SignupPrompt.module.sass
@@ -7,7 +7,8 @@
 .text
     margin-bottom: 32px
     +body-2
-    color: $neutrals4
+    color: $blue
+    text-decoration: underline
 
 .info
     margin-bottom: 3px
