Finished ropsten prompt, alignment needs some work

--- a/src/components/WrongNetworkPrompt/SignupPrompt.module.sass
+++ b/src/components/WrongNetworkPrompt/SignupPrompt.module.sass
@@ -3,6 +3,7 @@
 .title
     margin-bottom: 32px
     padding-right: 56px
+    padding-left: 60px
 
 .text
     margin-bottom: 32px
@@ -29,6 +30,5 @@
 
 .button
     width: 100%
-
     &:not(:last-child)
         margin-bottom: 8px
