--- a/src/components/NFT/Card.module.sass
+++ b/src/components/NFT/Card.module.sass
@@ -84,7 +84,7 @@
     display: flex
     flex-direction: column
     flex-grow: 1
-    padding: 20px 0
+    padding: 5px 0
     color: $neutrals2
     +dark
         color: $neutrals8
@@ -104,6 +104,7 @@
 
 .title
     margin-right: auto
+    margin-top: 2ex
     padding-top: 1px
     +body-bold-2
 
