--- a/src/components/Pack/Card.module.sass
+++ b/src/components/Pack/Card.module.sass
@@ -84,7 +84,7 @@
     display: flex
     flex-direction: column
     flex-grow: 1
-    padding: 20px 0
+    padding: 5px 0
     color: $neutrals2
     +dark
         color: $neutrals8
@@ -105,6 +105,7 @@
 .title
     margin-right: auto
     padding-top: 1px
+    margin-top: 2ex
     +body-bold-2
 
 .price
