--- a/src/components/OfferBuilder/SelectItems/Items.module.sass
+++ b/src/components/OfferBuilder/SelectItems/Items.module.sass
@@ -3,7 +3,9 @@
 .list
     display: flex
     flex-wrap: wrap
-    margin: -32px -16px 0
+    margin: -32px -16px 100
+    overflow-y: scroll
+    max-height: 500px
     +x
         margin: -32px -10px 0
     +d
@@ -34,7 +36,7 @@
         width: 100%
         margin: 0
         &:not(:last-child)
-            margin-bottom: 32px
+            margin-bottom: 0
 
 .loader
     margin: 32px auto 10px
