--- a/src/components/OfferBuilder/UploadDetails.module.sass
+++ b/src/components/OfferBuilder/UploadDetails.module.sass
@@ -71,10 +71,13 @@
     margin-right: auto
 
 .list
-    margin-bottom: 40px
-    padding-bottom: 40px
+    margin-bottom: 100px
+    padding-bottom: 100px
     border-bottom: 1px solid $neutrals6
-    max-width: 30%
+    max-width: 100%
+    max-height: 50%
+    min-height: 50%
+    overflow-y: scroll
     +m
         margin-bottom: 32px
         padding-bottom: 32px
