--- a/src/components/UnselectablePack/Card.module.sass
+++ b/src/components/UnselectablePack/Card.module.sass
@@ -84,7 +84,7 @@
     display: flex
     flex-direction: column
     flex-grow: 1
-    padding: 20px 0
+    padding: 5px 0
     color: $neutrals2
     +dark
         color: $neutrals8
@@ -105,6 +105,8 @@
 .title
     margin-right: auto
     padding-top: 1px
+    margin-top: 2ex
+    color: white
     +body-bold-2
 
 .price
@@ -118,6 +120,7 @@
     font-weight: 700
     text-transform: uppercase
     color: $gold
+    max-width: 38px
 
 .users
     display: flex
