--- a/src/components/Offer/Card.module.sass
+++ b/src/components/Offer/Card.module.sass
@@ -125,7 +125,8 @@
     margin-top: 5px
     padding: 0 8px
     border-radius: 4px
-    max-width: 73px
+    max-width: 70px
+    min-width: 70px
     box-shadow: inset 0 0 0 2px $gold
     font-size: 12px
     line-height: 26px
@@ -140,6 +141,7 @@
     padding: 0 8px
     border-radius: 4px
     max-width: 45px
+    min-width: 45px
     box-shadow: inset 0 0 0 2px $blue
     font-size: 12px
     line-height: 26px
@@ -154,6 +156,7 @@
     padding: 0 8px
     border-radius: 4px
     max-width: 78px
+    min-width: 78px
     box-shadow: inset 0 0 0 2px $green
     font-size: 12px
     line-height: 26px
