--- a/src/screens/Item/Control/Checkout/Checkout.module.sass
+++ b/src/screens/Item/Control/Checkout/Checkout.module.sass
@@ -40,6 +40,12 @@
     &:not(:last-child)
         margin-bottom: 8px
 
+.buttonFaded
+    opacity: 0.2
+    width: 100%
+    &:not(:last-child)
+        margin-bottom: 8px
+
 .attention
     display: flex
     align-items: center
