--- a/src/screens/Item/Control/Control.module.sass
+++ b/src/screens/Item/Control/Control.module.sass
@@ -55,6 +55,17 @@
         margin: 0 4px
         padding: 0 8px
 
+.button
+    width: 100%
+    &:not(:last-child)
+        margin-bottom: 8px
+
+.buttonFaded
+    opacity: 0.2
+    width: 100%
+    &:not(:last-child)
+        margin-bottom: 8px
+
 .text
     margin-top: 32px
     font-weight: 500
