Whitelabeled the web3auth moda

--- a/src/screens/Home/Description/Description.module.sass
+++ b/src/screens/Home/Description/Description.module.sass
@@ -34,11 +34,13 @@
 
 .title
     margin-bottom: 20px
+    z-index: 0
     +m
         font-size: 48px
 
 .text
     margin-bottom: 40px
+    z-index: 0
     +body-2
     color: $neutrals4
 
