--- a/src/screens/Home/Description/Description.module.sass
+++ b/src/screens/Home/Description/Description.module.sass
@@ -34,18 +34,22 @@
 
 .title
     margin-bottom: 20px
+    position: relative
     z-index: 0
     +m
         font-size: 48px
 
 .text
     margin-bottom: 40px
+    position: relative
     z-index: 0
     +body-2
     color: $neutrals4
 
 .btns
     display: flex
+    position: relative
+    z-index: 0
     +m
         display: block
 
